@@ -1,6 +1,11 @@
 JAKARTA TOMCAT CONNECTORS 2 (JK2) CHANGELOG:			-*-text-*-
 Last modified at [$Date$]
 
+Changes with JK2 2.0.4:
+    * Added the load balancer stickySession property. If set to 0
+      requests with servlet SESSION ID's can be routed to any Tomcat
+      worker. Default is 1, sessions are sticky.
+
 Changes with JK2 2.0.3:
     * jk2 set correctly the content-type in Apache 2.0,
       making it ready to works with mod_deflate and AddOutputFilterByType 
